# multi-vesc

./: .gitignore  CMakeLists.txt  README.md  setup.py
config/: example.json
example/: run_vesc.py
include/multivesc/: BusCan.hh  BusInterface.hh  BusSerial.hh  ComsCan.hh  ComsInterface.hh  ComsSerial.hh  Manager.hh  Motor.hh  crc.hh  datatypes.hh
src/: BusCan.cc  BusInterface.cc  BusSerial.cc  ComsCan.cc  ComsInterface.cc  ComsSerial.cc  Manager.cc  Motor.cc  python.cc  run_vesc.cc
